src/objects/Outcome_Payment_Trigger__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>Outcome_Payment_Triggers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Baseline__c</fullName>
        <label>Baseline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Outcome__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Outcome</label>
        <referenceTo>Primary_Outcome__c</referenceTo>
        <relationshipLabel>Outcome Payment Triggers</relationshipLabel>
        <relationshipName>Outcome_Payment_Triggers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payment Trigger</label>
    <nameField>
        <label>Outcome Payment Trigger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outcome Payment Triggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>